--- a/main.html
+++ b/main.html
@@ -3,189 +3,211 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Super Gambling Site</title>
+<title>Super Virtual Casino</title>
 <style>
-    body {
-        background-image: url('https://i.imgflip.com/5lc1pb.jpg');
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-        margin: 0;
-        font-family: 'Arial', sans-serif;
-        color: white;
-        text-align: center;
-    }
-    #balance {
-        font-size: 24px;
-        margin: 20px;
-    }
-    button {
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        margin: 10px;
-    }
-    input {
-        padding: 5px;
-        font-size: 16px;
-        width: 80px;
-    }
-    /* Ad modal styling */
-    #adModal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.8);
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
-    #adContent {
-        background: #222;
-        padding: 20px;
-        border-radius: 10px;
-        text-align: center;
-    }
-    #adContent img, #adContent video {
-        max-width: 80vw;
-        max-height: 60vh;
-    }
-    #rouletteCanvas {
-        margin-top: 20px;
-        background: #fff;
-        border-radius: 50%;
-    }
+body {
+    background-image: url('https://i.imgflip.com/5lc1pb.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    color: white;
+    text-align: center;
+}
+h2 { margin-top: 40px; }
+#balance { font-size: 24px; margin: 20px; }
+button { padding: 10px 20px; font-size: 16px; cursor: pointer; margin: 5px; }
+input, select { padding: 5px; font-size: 16px; margin: 5px; }
+canvas { margin-top: 20px; background: #fff; border-radius: 50%; }
+
+/* Ad modal styling */
+#adModal {
+    display: none;
+    position: fixed;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center; z-index: 1000;
+}
+#adContent {
+    background: #222;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+#adContent img, #adContent video { max-width: 80vw; max-height: 60vh; }
+
+/* Section styling */
+.section { margin: 40px 0; }
 </style>
 </head>
 <body>
 
 <div id="balance">Balance: $0</div>
-
 <button id="watchAdBtn">Watch Ad "Super" (+$1000)</button>
 
-<!-- Betting options -->
-<div>
-    <input type="number" id="betAmount" placeholder="Bet amount">
-    <select id="betChoice">
-        <option value="Red">Red</option>
-        <option value="Black">Black</option>
-    </select>
-</div>
-<button id="spinBtn">Spin Roulette</button>
-
-<!-- Roulette Canvas -->
-<canvas id="rouletteCanvas" width="300" height="300"></canvas>
-
-<!-- Ad Modal -->
+<!-- AD Modal -->
 <div id="adModal">
     <div id="adContent">
         <h2>Ad: Super</h2>
-        <!-- Replace with your ad image or video -->
-        <img src="Super.mp4" alt="Super Ad">
+        <img src="your_ad_image_or_video_here" alt="Super Ad">
         <br><br>
         <button id="closeAdBtn">Close Ad</button>
     </div>
 </div>
 
-<audio id="gamblingSound" src="Lets.mp3"></audio>
+<audio id="gamblingSound" src="path_to_your_downloaded_sound.mp3"></audio>
+
+<!-- Roulette Section -->
+<div class="section" id="rouletteSection">
+    <h2>Roulette</h2>
+    <input type="number" id="rouletteBetAmount" placeholder="Bet amount">
+    <select id="rouletteBetChoice">
+        <option value="Red">Red</option>
+        <option value="Black">Black</option>
+        <option value="Odd">Odd</option>
+        <option value="Even">Even</option>
+        <!-- Numbers 0–36 will be handled in spin logic -->
+    </select>
+    <button id="rouletteSpinBtn">Spin Roulette</button>
+    <canvas id="rouletteCanvas" width="300" height="300"></canvas>
+</div>
+
+<!-- Slots Section -->
+<div class="section" id="slotsSection">
+    <h2>Slots</h2>
+    <input type="number" id="slotsBetAmount" placeholder="Bet amount">
+    <button id="slotsSpinBtn">Spin Slots</button>
+    <div id="slotsResult"></div>
+</div>
+
+<!-- Blackjack Section -->
+<div class="section" id="blackjackSection">
+    <h2>Blackjack (Dealer: JackBlack)</h2>
+    <input type="number" id="blackjackBetAmount" placeholder="Bet amount">
+    <button id="blackjackStartBtn">Start Game</button>
+    <div id="blackjackGame"></div>
+</div>
+
+<!-- Double or Nothing Section -->
+<div class="section" id="doubleSection">
+    <h2>Double or Nothing</h2>
+    <input type="number" id="doubleBetAmount" placeholder="Bet amount">
+    <button id="doubleBtn">Go!</button>
+</div>
 
 <script>
+// Global balance
 let balance = 0;
 const balanceEl = document.getElementById('balance');
 const gamblingSound = document.getElementById('gamblingSound');
 
+// Ad modal
 const adModal = document.getElementById('adModal');
-const watchAdBtn = document.getElementById('watchAdBtn');
-const closeAdBtn = document.getElementById('closeAdBtn');
+document.getElementById('watchAdBtn').addEventListener('click', () => { adModal.style.display = 'flex'; gamblingSound.play(); });
+document.getElementById('closeAdBtn').addEventListener('click', () => { adModal.style.display = 'none'; balance+=1000; balanceEl.textContent=`Balance: $${balance}`; });
 
-// Show ad modal
-watchAdBtn.addEventListener('click', () => {
-    adModal.style.display = 'flex';
-    gamblingSound.play();
-});
+//////////////////////////////
+// ROULETTE (simplified)
+const rouletteCanvas = document.getElementById('rouletteCanvas');
+const ctx = rouletteCanvas.getContext('2d');
+const rouletteSegments = [...Array(37).keys()]; // 0-36
+const rouletteColors = ['#00FF00', '#FF0000', '#000000']; // 0=green, Red/Black
+let rouletteStartAngle = 0;
 
-// Close ad modal and reward user
-closeAdBtn.addEventListener('click', () => {
-    adModal.style.display = 'none';
-    balance += 1000;
-    balanceEl.textContent = `Balance: $${balance}`;
-});
-
-// Roulette Wheel Setup
-const canvas = document.getElementById('rouletteCanvas');
-const ctx = canvas.getContext('2d');
-const segments = ['Red', 'Black'];
-const colors = ['#FF0000', '#000000'];
-let startAngle = 0;
-
-// Draw roulette wheel
-function drawWheel() {
-    const arc = (2 * Math.PI) / segments.length;
-    for(let i = 0; i < segments.length; i++){
+function drawRouletteWheel() {
+    const arc = 2*Math.PI/rouletteSegments.length;
+    for(let i=0;i<rouletteSegments.length;i++){
         ctx.beginPath();
         ctx.moveTo(150,150);
-        ctx.arc(150,150,150,startAngle + i*arc, startAngle + (i+1)*arc);
-        ctx.fillStyle = colors[i];
-        ctx.fill();
-        ctx.stroke();
+        const color = rouletteSegments[i]===0 ? rouletteColors[0] : (i%2===0?rouletteColors[1]:rouletteColors[2]);
+        ctx.arc(150,150,150,rouletteStartAngle+i*arc, rouletteStartAngle+(i+1)*arc);
+        ctx.fillStyle = color; ctx.fill(); ctx.stroke();
         ctx.save();
-        ctx.translate(150 + Math.cos(startAngle + (i+0.5)*arc)*100, 150 + Math.sin(startAngle + (i+0.5)*arc)*100);
-        ctx.rotate(startAngle + (i+0.5)*arc);
-        ctx.fillStyle = '#fff';
-        ctx.font = '20px Arial';
-        ctx.fillText(segments[i], -20, 0);
+        ctx.translate(150+Math.cos(rouletteStartAngle+(i+0.5)*arc)*100,150+Math.sin(rouletteStartAngle+(i+0.5)*arc)*100);
+        ctx.rotate(rouletteStartAngle+(i+0.5)*arc);
+        ctx.fillStyle='#fff'; ctx.font='14px Arial';
+        ctx.fillText(rouletteSegments[i],-10,0);
         ctx.restore();
     }
 }
+drawRouletteWheel();
 
-drawWheel();
-
-document.getElementById('spinBtn').addEventListener('click', () => {
-    const betAmount = Number(document.getElementById('betAmount').value);
-    const betChoice = document.getElementById('betChoice').value;
-
-    if(betAmount <= 0 || betAmount > balance){
-        alert('Invalid bet amount!');
-        return;
-    }
-
+document.getElementById('rouletteSpinBtn').addEventListener('click',()=>{
+    const betAmount = Number(document.getElementById('rouletteBetAmount').value);
+    const betChoice = document.getElementById('rouletteBetChoice').value;
+    if(betAmount<=0 || betAmount>balance){alert('Invalid bet'); return;}
     gamblingSound.play();
 
-    let spinAngle = Math.random()*10 + 10; // random spin
-    let spinTime = 3000;
-    let start = null;
-
+    let spinAngle = Math.random()*10+10; let spinTime=3000; let start=null;
     function animate(time){
-        if(!start) start = time;
-        const elapsed = time - start;
+        if(!start) start=time;
+        const elapsed = time-start;
         const progress = Math.min(elapsed/spinTime,1);
-        startAngle += spinAngle * (1 - progress);
-        ctx.clearRect(0,0,300,300);
-        drawWheel();
-        if(progress < 1){
-            requestAnimationFrame(animate);
-        } else {
-            const index = Math.floor((2*segments.length - (startAngle/(2*Math.PI)*segments.length)) % segments.length);
-            const result = segments[index];
-
-            // Determine win/loss
-            if(result === betChoice){
-                balance += betAmount;
-                alert(`You won! It landed on ${result}. +$${betAmount}`);
-            } else {
-                balance -= betAmount;
-                alert(`You lost! It landed on ${result}. -$${betAmount}`);
-            }
-            balanceEl.textContent = `Balance: $${balance}`;
+        rouletteStartAngle += spinAngle*(1-progress);
+        ctx.clearRect(0,0,300,300); drawRouletteWheel();
+        if(progress<1){requestAnimationFrame(animate);}
+        else{
+            const index = Math.floor(rouletteSegments.length - (rouletteStartAngle/(2*Math.PI)*rouletteSegments.length)) % rouletteSegments.length;
+            const result = rouletteSegments[index];
+            let win=false;
+            if(betChoice==='Red' && result!==0 && result%2===1) win=true;
+            else if(betChoice==='Black' && result!==0 && result%2===0) win=true;
+            else if(betChoice==='Odd' && result!==0 && result%2===1) win=true;
+            else if(betChoice==='Even' && result!==0 && result%2===0) win=true;
+            else if(Number(betChoice)===result) win=true;
+            if(win){balance+=betAmount*2; alert(`Roulette: ${result}. You win $${betAmount*2}`);}
+            else{balance-=betAmount; alert(`Roulette: ${result}. You lose $${betAmount}`);}
+            balanceEl.textContent=`Balance: $${balance}`;
         }
     }
-
     requestAnimationFrame(animate);
 });
-</script>
 
+//////////////////////////////
+// SLOTS (simple 3 symbols)
+const slotSymbols = ['🍒','🍋','⭐','🔔','7️⃣'];
+document.getElementById('slotsSpinBtn').addEventListener('click',()=>{
+    const betAmount = Number(document.getElementById('slotsBetAmount').value);
+    if(betAmount<=0 || betAmount>balance){alert('Invalid bet'); return;}
+    gamblingSound.play();
+    const reel=[slotSymbols[Math.floor(Math.random()*slotSymbols.length)],slotSymbols[Math.floor(Math.random()*slotSymbols.length)],slotSymbols[Math.floor(Math.random()*slotSymbols.length)]];
+    document.getElementById('slotsResult').textContent = reel.join(' | ');
+    let win=false;
+    if(reel[0]===reel[1] && reel[1]===reel[2]){win=true;}
+    if(win){balance+=betAmount*5; alert(`Slots: JACKPOT! You win $${betAmount*5}`);}
+    else{balance-=betAmount; alert(`Slots: You lose $${betAmount}`);}
+    balanceEl.textContent=`Balance: $${balance}`;
+});
+
+//////////////////////////////
+// Blackjack (basic placeholder)
+document.getElementById('blackjackStartBtn').addEventListener('click',()=>{
+    const betAmount=Number(document.getElementById('blackjackBetAmount').value);
+    if(betAmount<=0 || betAmount>balance){alert('Invalid bet'); return;}
+    gamblingSound.play();
+    const dealerCard=Math.floor(Math.random()*11)+1;
+    const playerCard=Math.floor(Math.random()*11)+1;
+    let gameText=`JackBlack shows ${dealerCard}. You have ${playerCard}. `;
+    if(playerCard>dealerCard){balance+=betAmount; gameText+=`You win $${betAmount}`;}
+    else if(playerCard<dealerCard){balance-=betAmount; gameText+=`You lose $${betAmount}`;}
+    else gameText+=`Draw!`;
+    document.getElementById('blackjackGame').textContent=gameText;
+    balanceEl.textContent=`Balance: $${balance}`;
+});
+
+//////////////////////////////
+// Double or Nothing
+document.getElementById('doubleBtn').addEventListener('click',()=>{
+    const betAmount=Number(document.getElementById('doubleBetAmount').value);
+    if(betAmount<=0 || betAmount>balance){alert('Invalid bet'); return;}
+    gamblingSound.play();
+    const outcome = Math.random()<0.5 ? 'win':'lose';
+    if(outcome==='win'){balance+=betAmount; alert(`Double or Nothing: You win! +$${betAmount}`);}
+    else{balance-=betAmount; alert(`Double or Nothing: You lose! -$${betAmount}`);}
+    balanceEl.textContent=`Balance: $${balance}`;
+});
+</script>
 </body>
 </html>
