--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@ canvas { margin-top: 20px; background: #fff; border-radius: 50%; }
 <div id="adModal">
     <div id="adContent">
         <h2>Ad: Super</h2>
-        <img src="your_ad_image_or_video_here" alt="Super Ad">
+        <img src="Super.mp4" alt="Super Ad">
         <br><br>
         <button id="closeAdBtn">Close Ad</button>
     </div>
 </div>
 
-<audio id="gamblingSound" src="path_to_your_downloaded_sound.mp3"></audio>
+<audio id="gamblingSound" src="Lets.mp3"></audio>
 
 <!-- Roulette Section -->
 <div class="section" id="rouletteSection">
