--- a/index.html
+++ b/index.html
@@ -3,33 +3,87 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Super Virtual Casino</title>
+<title>Virtual Casino Menu</title>
 <style>
 body {
     background-image: url('https://i.imgflip.com/5lc1pb.jpg');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    margin: 0;
     font-family: Arial, sans-serif;
-    color: white;
     text-align: center;
+    color: white;
 }
-button { padding: 15px 30px; font-size: 18px; margin: 20px; cursor: pointer; }
+h1 { margin-top: 30px; font-size: 36px; }
 #balance { font-size: 24px; margin: 20px; }
+button {
+    font-size: 22px;
+    padding: 20px 30px;
+    margin: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0.7);
+    color: white;
+    border: 2px solid white;
+}
+#adModal {
+    display: none;
+    position: fixed;
+    top:0; left:0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+}
+#adContent {
+    background: black;
+    padding: 20px;
+    border-radius: 10px;
+}
 </style>
 </head>
 <body>
-<h1>Super Virtual Casino</h1>
+
+<h1>Virtual Casino</h1>
 <div id="balance">Balance: $0</div>
-<button onclick="location.href='roulette.html'">Play Roulette</button>
-<button onclick="location.href='slots.html'">Play Slots</button>
-<button onclick="location.href='blackjack.html'">Play Blackjack</button>
-<button onclick="location.href='double.html'">Double or Nothing</button>
+
+<!-- Game Buttons -->
+<button onclick="location.href='bigsmoke.html'">Big Smoke Table - Find the Burger!</button>
+<br>
+<button id="watchAdBtn">Watch Ad to Earn $1000</button>
+
+<!-- Ad Modal -->
+<div id="adModal">
+    <div id="adContent">
+        <h2>Ad: Watch to earn money</h2>
+        <video src="Super.mp4" controls autoplay style="max-width:80vw; max-height:60vh;"></video>
+        <br><br>
+        <button id="closeAdBtn">Close Ad</button>
+    </div>
+</div>
+
+<audio id="gamblingSound" src="Lets.mp3"></audio>
 
 <script>
 let balance = Number(localStorage.getItem('balance')) || 0;
-document.getElementById('balance').textContent = `Balance: $${balance}`;
+const balanceEl = document.getElementById('balance');
+balanceEl.textContent = `Balance: $${balance}`;
+
+// AD logic
+const adModal = document.getElementById('adModal');
+const watchAdBtn = document.getElementById('watchAdBtn');
+const closeAdBtn = document.getElementById('closeAdBtn');
+
+watchAdBtn.onclick = () => {
+    adModal.style.display = 'flex';
+};
+
+closeAdBtn.onclick = () => {
+    adModal.style.display = 'none';
+    balance += 1000; // reward for watching ad
+    localStorage.setItem('balance', balance);
+    balanceEl.textContent = `Balance: $${balance}`;
+};
 </script>
+
 </body>
 </html>
