--- a/slots.html
+++ b/slots.html
@@ -1,58 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Slots</title>
 <style>
 body { 
-    background-image: url('https://i.imgflip.com/5lc1pb.jpg');
-    background-size: cover; background-position: center; font-family: Arial, sans-serif; text-align:center; color:white;
+    background-color: black; /* Changed background to black */
+    font-family: Arial, sans-serif; 
+    text-align: center; 
+    color: white; 
+    margin: 0; 
+    padding: 20px;
 }
-#balance{ font-size:24px; margin:20px; }
-button{ font-size:16px; padding:10px; margin:10px; cursor:pointer; }
-#slotsResult{ font-size:24px; margin-top:20px; }
+h1 {
+    margin-bottom: 10px;
+}
+#balance {
+    font-size: 24px; 
+    margin: 20px 0;
+}
+input[type=number] {
+    font-size: 16px;
+    padding: 10px;
+    width: 150px;
+    margin: 10px 0;
+}
+button {
+    font-size: 16px; 
+    padding: 10px 20px; 
+    margin: 10px;
+    cursor: pointer;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+}
+button:hover {
+    background-color: #555;
+}
+#slotsResult {
+    font-size: 36px;
+    margin-top: 20px;
+    min-height: 50px;
+    transition: opacity 0.5s ease;
+    opacity: 1;
+}
 </style>
 </head>
 <body>
 <h1>Slots Machine</h1>
 <div id="balance">Balance: $0</div>
-<input type="number" id="slotsBet" placeholder="Bet amount">
+<input type="number" id="slotsBet" placeholder="Bet amount" min="1">
+<br>
 <button id="spinSlotsBtn">Spin</button>
 <div id="slotsResult"></div>
-<br><button onclick="location.href='index.html'">Back to Menu</button>
+<br>
+<button onclick="location.href='index.html'">Back to Menu</button>
 <audio id="gamblingSound" src="Lets.mp3"></audio>
 
 <script>
-let balance = Number(localStorage.getItem('balance')) || 0;
+let balance = Number(localStorage.getItem('balance')) || 100; // Default to 100 for testing
 const balanceEl = document.getElementById('balance');
-balanceEl.textContent=`Balance: $${balance}`;
+balanceEl.textContent = `Balance: $${balance}`;
 const gamblingSound = document.getElementById('gamblingSound');
 
-document.getElementById('spinSlotsBtn').addEventListener('click',()=>{
+document.getElementById('spinSlotsBtn').addEventListener('click', () => {
     const bet = Number(document.getElementById('slotsBet').value);
-    if(bet<=0||bet>balance){alert('Invalid bet'); return;}
+    if (isNaN(bet) || bet <= 0 || bet > balance) {
+        alert('Invalid bet! Please enter a positive number up to your current balance.');
+        return;
+    }
 
-    gamblingSound.currentTime=0; gamblingSound.loop=true; gamblingSound.play();
+    // Play sound
+    gamblingSound.currentTime = 0;
+    gamblingSound.loop = false;
+    gamblingSound.play();
 
     const symbols = ['🍒','🍋','🍊','⭐','💎'];
-    const reel=[symbols[Math.floor(Math.random()*symbols.length)],
-                symbols[Math.floor(Math.random()*symbols.length)],
-                symbols[Math.floor(Math.random()*symbols.length)]];
-    
-    setTimeout(()=>{
-        gamblingSound.pause();
-        document.getElementById('slotsResult').textContent=reel.join(' ');
-        if(reel[0]===reel[1] && reel[1]===reel[2]){
-            const win=bet*5; balance+=win;
-            alert(`Jackpot! You win $${win}`);
-        } else if(reel[0]===reel[1]||reel[1]===reel[2]||reel[0]===reel[2]){
-            const win=bet*2; balance+=win;
-            alert(`Nice! You win $${win}`);
-        } else{ balance-=bet; alert(`You lose $${bet}`);}
-        balanceEl.textContent=`Balance: $${balance}`;
-        localStorage.setItem('balance',balance);
-    },1000);
+    // Animate reel spinning effect
+    const reelCount = 3;
+    const reelResults = [];
+    for (let i=0; i<reelCount; i++) {
+        reelResults.push('');
+    }
+    document.getElementById('slotsResult').style.opacity = 0;
+    document.getElementById('slotsResult').textContent = '';
+
+    // Generate random symbols for reels
+    const reel = [];
+    for (let i=0; i<reelCount; i++) {
+        reel.push(symbols[Math.floor(Math.random() * symbols.length)]);
+    }
+
+    // Display spinning animation
+    let spinCount = 0;
+    const spinInterval = setInterval(() => {
+        const tempReel = [];
+        for (let i=0; i<reelCount; i++) {
+            tempReel.push(symbols[Math.floor(Math.random() * symbols.length)]);
+        }
+        document.getElementById('slotsResult').textContent = tempReel.join(' ');
+        spinCount++;
+        if (spinCount >= 10) { // Spin 10 times
+            clearInterval(spinInterval);
+            // Show final reel
+            document.getElementById('slotsResult').textContent = reel.join(' ');
+            // Evaluate results
+            if (reel[0] === reel[1] && reel[1] === reel[2]) {
+                const win = bet * 5;
+                balance += win;
+                alert(`🎉 Jackpot! You win $${win}`);
+            } else if (reel[0] === reel[1] || reel[1] === reel[2] || reel[0] === reel[2]) {
+                const win = bet * 2;
+                balance += win;
+                alert(`😊 Nice! You win $${win}`);
+            } else {
+                balance -= bet;
+                alert(`😢 You lose $${bet}`);
+            }
+            balanceEl.textContent = `Balance: $${balance}`;
+            localStorage.setItem('balance', balance);
+            document.getElementById('slotsResult').style.opacity = 1;
+        }
+    }, 200);
 });
 </script>
 </body>
