--- a/double.html
+++ b/double.html
@@ -1,48 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Double or Nothing</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Double or Nothing - Heads or Tails</title>
 <style>
 body { 
-    background-image: url('https://i.imgflip.com/5lc1pb.jpg');
-    background-size: cover; background-position: center; font-family: Arial, sans-serif; text-align:center; color:white;
+    background-color: black; /* Black background */
+    font-family: Arial, sans-serif; 
+    text-align: center; 
+    color: white; 
+    margin: 0; 
+    padding: 20px;
 }
-#balance{ font-size:24px; margin:20px; }
-button{ font-size:16px; padding:10px; margin:10px; cursor:pointer; }
-#doubleResult{ font-size:20px; margin-top:20px; }
+h1 {
+    margin-bottom: 10px;
+}
+#balance {
+    font-size: 24px; 
+    margin: 20px 0;
+}
+input[type=number] {
+    font-size: 16px;
+    padding: 10px;
+    width: 150px;
+    margin: 10px 0;
+}
+button {
+    font-size: 16px; 
+    padding: 10px 20px; 
+    margin: 10px;
+    cursor: pointer;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+}
+button:hover {
+    background-color: #555;
+}
+#guessOptions {
+    margin: 10px 0;
+}
+#coinContainer {
+    margin-top: 20px;
+    height: 100px;
+    perspective: 1000px; /* for 3D flip effect */
+    display: inline-block;
+}
+#coin {
+    width: 100px;
+    height: 100px;
+    background-color: #222;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    margin: 0 auto;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+}
+@keyframes flip {
+    0% { transform: rotateY(0deg); }
+    100% { transform: rotateY(1800deg); } /* multiple spins */
+}
 </style>
 </head>
 <body>
-<h1>Double or Nothing</h1>
+<h1>Double or Nothing - Heads or Tails</h1>
 <div id="balance">Balance: $0</div>
-<input type="number" id="doubleBet" placeholder="Bet amount">
-<button id="doubleBtn">Flip</button>
+<input type="number" id="doubleBet" placeholder="Bet amount" min="1" />
+<div id="guessOptions">
+    <label><input type="radio" name="guess" value="Heads" checked> Heads</label>
+    <label><input type="radio" name="guess" value="Tails"> Tails</label>
+</div>
+<button id="flipBtn">Flip the Coin</button>
+<div id="coinContainer" style="display:none;">
+    <div id="coin">🪙</div>
+</div>
 <div id="doubleResult"></div>
-<br><button onclick="location.href='index.html'">Back to Menu</button>
+<br>
+<button onclick="location.href='index.html'">Back to Menu</button>
 <audio id="gamblingSound" src="Lets.mp3"></audio>
 
 <script>
-let balance = Number(localStorage.getItem('balance')) || 0;
+let balance = Number(localStorage.getItem('balance')) || 100; // starting balance
 const balanceEl = document.getElementById('balance');
-balanceEl.textContent=`Balance: $${balance}`;
+balanceEl.textContent = `Balance: $${balance}`;
 const gamblingSound = document.getElementById('gamblingSound');
+const coin = document.getElementById('coin');
+const coinContainer = document.getElementById('coinContainer');
 
-document.getElementById('doubleBtn').addEventListener('click',()=>{
-    const bet=Number(document.getElementById('doubleBet').value);
-    if(bet<=0||bet>balance){alert('Invalid bet'); return;}
+document.getElementById('flipBtn').addEventListener('click', () => {
+    const bet = Number(document.getElementById('doubleBet').value);
+    const guess = document.querySelector('input[name="guess"]:checked').value;
 
-    gamblingSound.currentTime=0; gamblingSound.loop=true; gamblingSound.play();
+    if (isNaN(bet) || bet <= 0 || bet > balance) {
+        alert('Invalid bet! Enter a positive amount up to your balance.');
+        return;
+    }
 
-    setTimeout(()=>{
-        gamblingSound.pause();
-        const win = Math.random()<0.5;
-        if(win){balance+=bet; document.getElementById('doubleResult').textContent=`You win! $${bet} added.`;}
-        else{balance-=bet; document.getElementById('doubleResult').textContent=`You lose! $${bet} lost.`;}
-        balanceEl.textContent=`Balance: $${balance}`;
-        localStorage.setItem('balance',balance);
-    },1000);
+    // Play sound
+    gamblingSound.currentTime = 0;
+    gamblingSound.loop = false;
+    gamblingSound.play();
+
+    // Show the coin container
+    coinContainer.style.display = 'block';
+    // Reset transform
+    coin.style.transform = 'rotateY(0deg)';
+    // Start flip animation
+    coin.style.animation = 'flip 2s forwards';
+
+    // Determine coin result randomly
+    const result = Math.random() < 0.5 ? 'Heads' : 'Tails';
+
+    // Animate flip
+    setTimeout(() => {
+        // Flip the coin
+        coin.style.transition = 'transform 0.5s';
+        coin.style.transform = 'rotateY(180deg)';
+        setTimeout(() => {
+            // Show result on coin
+            coin.textContent = result === 'Heads' ? '🪙' : '🪙'; // same emoji, but you could change
+            // Check if guess matches result
+            const isWin = (guess === result);
+            if (isWin) {
+                balance += bet;
+                document.getElementById('doubleResult').textContent = `You guessed correctly! You win $${bet}.`;
+            } else {
+                balance -= bet;
+                document.getElementById('doubleResult').textContent = `Wrong guess! You lose $${bet}.`;
+            }
+            balanceEl.textContent = `Balance: $${balance}`;
+            localStorage.setItem('balance', balance);
+            // Flip back to original position after delay
+            setTimeout(() => {
+                coin.textContent = '🪙';
+                coin.style.transform = 'rotateY(0deg)';
+                coin.style.transition = '';
+                // Hide coin container after a moment
+                setTimeout(() => {
+                    coinContainer.style.display = 'none';
+                }, 1500);
+            }, 1500);
+        }, 500);
+    }, 2000); // wait for initial flip animation
 });
 </script>
 </body>
