--- a/roulette.html
+++ b/roulette.html
@@ -3,99 +3,115 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Roulette</title>
+<title>Roulette with Pointer</title>
 <style>
-body { 
-    background-color: black; /* Changed from background-image to background-color */
-    font-family: Arial, sans-serif; 
-    text-align:center; 
-    color:white;
+body {
+  background-color: black;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  color: white;
 }
-canvas { margin-top: 20px; background:#fff; border-radius:50%; }
-#balance{ font-size:24px; margin:20px; }
-button, input, select{ font-size:16px; padding:5px; margin:5px; }
-#arrow{ width:0; height:0; border-left:15px solid transparent; border-right:15px solid transparent; border-bottom:30px solid yellow; margin:10px auto; }
+canvas { margin-top: 20px; background: #fff; border-radius: 50%; }
+#balance { font-size: 24px; margin: 20px; }
+button, input, select { font-size: 16px; padding: 5px; margin: 5px; }
+#pointer {
+  width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent;
+  border-bottom: 30px solid yellow; margin: -10px auto 0 auto;
+}
 </style>
 </head>
 <body>
 
 <h1>Roulette</h1>
-<div id="balance">Balance: $0</div>
-<div id="arrow"></div>
-<input type="number" id="rouletteBetAmount" placeholder="Bet amount" />
-<select id="rouletteBetChoice">
+<div id="balance">Balance: $<span id="balanceAmount">0</span></div>
+<div id="pointer"></div>
+<canvas id="wheel" width="300" height="300"></canvas>
+<br>
+<input type="number" id="betAmount" placeholder="Bet amount" />
+<select id="betChoice">
   <option value="Red">Red</option>
   <option value="Black">Black</option>
   <option value="Odd">Odd</option>
   <option value="Even">Even</option>
 </select>
-<button id="rouletteSpinBtn">Spin</button>
-<br><button onclick="location.href='index.html'">Back to Menu</button>
-
-<canvas id="rouletteCanvas" width="300" height="300"></canvas>
-<audio id="gamblingSound" src="Lets.mp3"></audio>
+<button id="spinBtn">Spin</button>
+<button onclick="location.href='index.html'">Back to Menu</button>
 
 <script>
-let balance = Number(localStorage.getItem('balance')) || 0;
-const balanceEl = document.getElementById('balance');
-balanceEl.textContent = `Balance: $${balance}`;
-const canvas = document.getElementById('rouletteCanvas');
+const canvas = document.getElementById('wheel');
 const ctx = canvas.getContext('2d');
-const gamblingSound = document.getElementById('gamblingSound');
+const balanceDisplay = document.getElementById('balanceAmount');
+let balance = parseInt(localStorage.getItem('balance')) || 100;
+let startAngle = 0;
 
-const segments = [...Array(37).keys()]; // 0-36
-let startAngle=0;
-
-function drawWheel(){
-    const arc = 2*Math.PI/segments.length;
-    for(let i=0;i<segments.length;i++){
-        ctx.beginPath(); ctx.moveTo(150,150);
-        const color = segments[i]===0 ? '#00FF00' : (i%2===0?'#000000':'#FF0000');
-        ctx.arc(150,150,150,startAngle+i*arc,startAngle+(i+1)*arc);
-        ctx.fillStyle=color; ctx.fill(); ctx.stroke();
-        ctx.save();
-        ctx.translate(150+Math.cos(startAngle+(i+0.5)*arc)*100,150+Math.sin(startAngle+(i+0.5)*arc)*100);
-        ctx.rotate(startAngle+(i+0.5)*arc);
-        ctx.fillStyle='#fff'; ctx.font='14px Arial';
-        ctx.fillText(segments[i],-10,0); ctx.restore();
-    }
+function drawWheel() {
+  ctx.clearRect(0, 0, 300, 300);
+  const segments = [...Array(37).keys()]; // 0-36
+  const arc = 2 * Math.PI / segments.length;
+  for (let i=0; i<segments.length; i++) {
+    ctx.beginPath();
+    ctx.moveTo(150,150);
+    ctx.arc(150,150,150,startAngle + i*arc, startAngle + (i+1)*arc);
+    ctx.fillStyle = segments[i]===0 ? '#00FF00' : (i%2===0 ? '#000000' : '#FF0000');
+    ctx.fill();
+    ctx.stroke();
+    // Add number labels
+    ctx.save();
+    ctx.translate(150 + Math.cos(startAngle + (i+0.5)*arc)*100, 150 + Math.sin(startAngle + (i+0.5)*arc)*100);
+    ctx.rotate(startAngle + (i+0.5)*arc);
+    ctx.fillStyle = '#fff';
+    ctx.font = '14px Arial';
+    ctx.fillText(segments[i], -10, 0);
+    ctx.restore();
+  }
 }
+
+// Initial draw
 drawWheel();
 
-document.getElementById('rouletteSpinBtn').addEventListener('click',()=>{
-    const betAmount=Number(document.getElementById('rouletteBetAmount').value);
-    const betChoice=document.getElementById('rouletteBetChoice').value;
-    if(betAmount<=0 || betAmount>balance){alert('Invalid bet'); return;}
+// Spin button handler
+document.getElementById('spinBtn').addEventListener('click', () => {
+  const bet = parseInt(document.getElementById('betAmount').value);
+  const choice = document.getElementById('betChoice').value;
+  if (isNaN(bet) || bet <= 0 || bet > balance) {
+    alert('Invalid bet');
+    return;
+  }
+  // Animate wheel spin
+  const spinDeg = Math.random() * 10 + 10; // spin speed
+  const spinTime = 3000; // duration
+  const startTime = performance.now();
 
-    gamblingSound.currentTime=0;
-    gamblingSound.loop=true;
-    gamblingSound.play();
-
-    let spinAngle=Math.random()*10+10; let spinTime=3000; let start=null;
-
-    function animate(time){
-        if(!start) start=time;
-        const elapsed = time-start;
-        const progress=Math.min(elapsed/spinTime,1);
-        startAngle += spinAngle*(1-progress);
-        ctx.clearRect(0,0,300,300); drawWheel();
-        if(progress<1){requestAnimationFrame(animate);}
-        else{
-            gamblingSound.pause();
-            const index = Math.floor(segments.length - (startAngle/(2*Math.PI)*segments.length)) % segments.length;
-            const result = segments[index];
-            let win=false;
-            if(betChoice==='Red' && result!==0 && result%2===1) win=true;
-            else if(betChoice==='Black' && result!==0 && result%2===0) win=true;
-            else if(betChoice==='Odd' && result!==0 && result%2===1) win=true;
-            else if(betChoice==='Even' && result!==0 && result%2===0) win=true;
-            if(win){balance+=betAmount*2; alert(`Roulette: ${result}. You win $${betAmount*2}`);}
-            else{balance-=betAmount; alert(`Roulette: ${result}. You lose $${betAmount}`);}
-            balanceEl.textContent=`Balance: $${balance}`;
-            localStorage.setItem('balance',balance);
-        }
+  function animate(now) {
+    const elapsed = now - startTime;
+    const progress = Math.min(elapsed / spinTime, 1);
+    startAngle += spinDeg * (1 - progress);
+    drawWheel();
+    if (progress < 1) {
+      requestAnimationFrame(animate);
+    } else {
+      // Calculate result
+      const finalDeg = startAngle % (2*Math.PI);
+      const index = Math.floor(((2*Math.PI - finalDeg + Math.PI/37) % (2*Math.PI)) / (2*Math.PI) * 37);
+      const resultNumber = index;
+      // Determine win
+      let win = false;
+      if (choice === 'Red' && resultNumber !==0 && resultNumber%2===1) win=true;
+      if (choice === 'Black' && resultNumber !==0 && resultNumber%2===0) win=true;
+      if (choice==='Odd' && resultNumber!==0 && resultNumber%2===1) win=true;
+      if (choice==='Even' && resultNumber!==0 && resultNumber%2===0) win=true;
+      if (win) {
+        balance += bet * 2;
+        alert(`Result: ${resultNumber}. You WIN! +$${bet*2}`);
+      } else {
+        balance -= bet;
+        alert(`Result: ${resultNumber}. You LOSE! -$${bet}`);
+      }
+      balanceDisplay.textContent = balance;
+      localStorage.setItem('balance', balance);
     }
-    requestAnimationFrame(animate);
+  }
+  requestAnimationFrame(animate);
 });
 </script>
 
